--- a/mystyle.css
+++ b/mystyle.css
@@ -60,7 +60,7 @@ html {
     color: #fff;
     grid-row-start: 5;
     grid-row-end: 6;
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: 5;
   }
   
@@ -88,5 +88,14 @@ html {
     grid-template-columns: repeat(4, 1fr);
     /* grid-gap: 20px; */
     /* padding: 20px; */
+  }
+
+  .backspace {
+    background-color: #c4c4c4;
+    color: #000;
+    grid-row-start: 5;
+    grid-row-end: 6;
+    grid-column-start: 3;
+    grid-column-end: 4;
   }
 
